created production build

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <!-- <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=fetch"></script> -->
 </head>
 <body>
   <p>Hello World</p>
-  <script src="bundle.js"></script>
   <h1>Users</h1>
+  <table>
+    <thead>
+      <th>&nbsp;</th>
+      <th>Id</th>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+    </thead>
+    <tbody id="users">
+    </tbody>
+  </table>
 </body>
 </html>
